@@ -1,21 +1,20 @@
 package org.openlca.ilcd.commons;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import javax.xml.namespace.QName;
-
-import org.openlca.ilcd.commons.annotations.FreeText;
-import org.openlca.ilcd.commons.annotations.Label;
-
 import jakarta.xml.bind.annotation.XmlAccessType;
 import jakarta.xml.bind.annotation.XmlAccessorType;
 import jakarta.xml.bind.annotation.XmlAnyAttribute;
 import jakarta.xml.bind.annotation.XmlElement;
 import jakarta.xml.bind.annotation.XmlType;
+import org.openlca.ilcd.commons.annotations.FreeText;
+import org.openlca.ilcd.commons.annotations.Label;
 import org.openlca.ilcd.util.Val;
+
+import javax.xml.namespace.QName;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @XmlAccessorType(XmlAccessType.FIELD)
 @XmlType(name = "CommissionerAndGoalType", propOrder = {"commissioners",
@@ -69,11 +68,13 @@ public class CommissionerAndGoal implements Copyable<CommissionerAndGoal> {
 	}
 
 	public List<LangString> getProject() {
-		return project != null ? project : List.of();
+		return project != null ? project : Collections.emptyList();
 	}
 
 	public List<LangString> getIntendedApplications() {
-		return intendedApplications != null ? intendedApplications : List.of();
+		return intendedApplications != null
+			? intendedApplications
+			: Collections.emptyList();
 	}
 
 	public Other getOther() {
