@@ -9,6 +9,7 @@ import jakarta.xml.bind.annotation.XmlType;
 import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -36,7 +37,7 @@ public class DataQualityIndicator implements Copyable<DataQualityIndicator> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
