@@ -2,15 +2,14 @@ package org.openlca.ilcd.descriptors;
 
 import jakarta.xml.bind.annotation.XmlAccessType;
 import jakarta.xml.bind.annotation.XmlAccessorType;
-import jakarta.xml.bind.annotation.XmlAttribute;
 import jakarta.xml.bind.annotation.XmlElement;
-import jakarta.xml.bind.annotation.XmlSchemaType;
 import jakarta.xml.bind.annotation.XmlType;
 import org.openlca.ilcd.commons.DataSetType;
 import org.openlca.ilcd.commons.LangString;
 import org.openlca.ilcd.util.Val;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
@@ -40,7 +39,7 @@ public class FlowPropertyDescriptor extends Descriptor<FlowPropertyDescriptor> {
 	// region getters
 
 	public List<LangString> getSynonyms() {
-		return synonyms != null ? synonyms : List.of();
+		return synonyms != null ? synonyms : Collections.emptyList();
 	}
 
 	public UnitGroupReference getUnitGroup() {
