@@ -12,6 +12,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -33,7 +34,7 @@ public class Representativeness implements Copyable<Representativeness> {
 	// region getters
 
 	public List<Ref> getDataSource() {
-		return dataSource != null ? dataSource : List.of();
+		return dataSource != null ? dataSource : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -41,7 +42,7 @@ public class Representativeness implements Copyable<Representativeness> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
