@@ -14,6 +14,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -70,7 +71,7 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getSynonyms() {
-		return synonyms != null ? synonyms : List.of();
+		return synonyms != null ? synonyms : Collections.emptyList();
 	}
 
 	public FlowCategoryInfo getClassificationInformation() {
@@ -86,7 +87,7 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public List<LangString> getGeneralComment() {
-		return generalComment != null ? generalComment : List.of();
+		return generalComment != null ? generalComment : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -94,7 +95,7 @@ public class DataSetInfo implements Copyable<DataSetInfo> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
