@@ -16,6 +16,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -70,7 +71,7 @@ public class Flow implements IDataSet, Copyable<Flow> {
 	}
 
 	public List<FlowPropertyRef> getFlowProperties() {
-		return flowProperties != null ? flowProperties : List.of();
+		return flowProperties != null ? flowProperties : Collections.emptyList();
 	}
 
 	public String getVersion() {
@@ -86,7 +87,7 @@ public class Flow implements IDataSet, Copyable<Flow> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
