@@ -14,6 +14,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -38,7 +39,7 @@ public class Geography implements Copyable<Geography> {
 	// region getters
 
 	public List<LangString> getLocation() {
-		return location != null ? location : List.of();
+		return location != null ? location : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -46,7 +47,7 @@ public class Geography implements Copyable<Geography> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
