@@ -15,6 +15,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -72,7 +73,7 @@ public class ImpactMethod implements IDataSet, Copyable<ImpactMethod> {
 	}
 
 	public List<Factor> getFactors() {
-		return factors != null ? factors : List.of();
+		return factors != null ? factors : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -92,7 +93,7 @@ public class ImpactMethod implements IDataSet, Copyable<ImpactMethod> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
