@@ -16,6 +16,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -62,7 +63,7 @@ public class Modelling implements Copyable<Modelling> {
 	// region getters
 
 	public List<LangString> getUseAdvice() {
-		return useAdvice != null ? useAdvice : List.of();
+		return useAdvice != null ? useAdvice : Collections.emptyList();
 	}
 
 	public NormalisationAndWeighting getNormalisationAndWeighting() {
@@ -70,7 +71,7 @@ public class Modelling implements Copyable<Modelling> {
 	}
 
 	public List<Ref> getDataSources() {
-		return dataSources != null ? dataSources : List.of();
+		return dataSources != null ? dataSources : Collections.emptyList();
 	}
 
 	public Completeness getCompleteness() {
@@ -78,11 +79,11 @@ public class Modelling implements Copyable<Modelling> {
 	}
 
 	public List<Review> getReviews() {
-		return reviews != null ? reviews : List.of();
+		return reviews != null ? reviews : Collections.emptyList();
 	}
 
 	public List<ComplianceDeclaration> getComplianceDeclarations() {
-		return complianceDeclarations != null ? complianceDeclarations : List.of();
+		return complianceDeclarations != null ? complianceDeclarations : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -90,7 +91,7 @@ public class Modelling implements Copyable<Modelling> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
