@@ -11,6 +11,8 @@ import org.openlca.ilcd.commons.ImpactCategory;
 import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
+
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -38,7 +40,7 @@ public class FlowCompletenessEntry implements Copyable<FlowCompletenessEntry> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
