@@ -18,6 +18,7 @@ import org.openlca.ilcd.util.Val;
 import javax.xml.datatype.XMLGregorianCalendar;
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -99,7 +100,7 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public List<Ref> getPrecedingVersions() {
-		return precedingVersions != null ? precedingVersions : List.of();
+		return precedingVersions != null ? precedingVersions : Collections.emptyList();
 	}
 
 	public String getUri() {
@@ -131,7 +132,7 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public List<Ref> getEntitiesWithExclusiveAccess() {
-		return entitiesWithExclusiveAccess != null ? entitiesWithExclusiveAccess : List.of();
+		return entitiesWithExclusiveAccess != null ? entitiesWithExclusiveAccess : Collections.emptyList();
 	}
 
 	public LicenseType getLicense() {
@@ -139,7 +140,7 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public List<LangString> getAccessRestrictions() {
-		return accessRestrictions != null ? accessRestrictions : List.of();
+		return accessRestrictions != null ? accessRestrictions : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -147,7 +148,7 @@ public class Publication implements Copyable<Publication> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
