@@ -15,6 +15,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -43,11 +44,11 @@ public class QuantitativeReference implements Copyable<QuantitativeReference> {
 	// region getters
 
 	public List<Integer> getReferenceFlows() {
-		return referenceFlows != null ? referenceFlows : List.of();
+		return referenceFlows != null ? referenceFlows : Collections.emptyList();
 	}
 
 	public List<LangString> getFunctionalUnit() {
-		return functionalUnit != null ? functionalUnit : List.of();
+		return functionalUnit != null ? functionalUnit : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -59,7 +60,7 @@ public class QuantitativeReference implements Copyable<QuantitativeReference> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
