@@ -12,6 +12,7 @@ import org.openlca.ilcd.util.Val;
 
 import javax.xml.namespace.QName;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -36,7 +37,7 @@ public class Modelling implements Copyable<Modelling> {
 	// region getters
 
 	public List<ComplianceDeclaration> getComplianceDeclarations() {
-		return complianceDeclarations != null ? complianceDeclarations : List.of();
+		return complianceDeclarations != null ? complianceDeclarations : Collections.emptyList();
 	}
 
 	public Other getOther() {
@@ -44,7 +45,7 @@ public class Modelling implements Copyable<Modelling> {
 	}
 
 	public Map<QName, String> getOtherAttributes() {
-		return otherAttributes != null ? otherAttributes : Map.of();
+		return otherAttributes != null ? otherAttributes : Collections.emptyMap();
 	}
 
 	// endregion
